--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,15 @@
 <html>
-	<head>
-  </head>
-	<body>
-	</body>
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>BRISK</title>
+	<link type="text/css" rel="stylesheet" href="stylesheets/bootstrap.css">
+	<link type="text/css" rel="stylesheet" href="stylesheets/style.css">
+</head>
+<body>
+Hello World
+	
+<script type="text/javascript" src="javascripts/jquery.min.js"></script>
+<script type="text/javascript" src="javascripts/bootstrap.js"></script>
+</body>
 </html>
